--- a/WaterLightAnimation/index.html
+++ b/WaterLightAnimation/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WaterLightAnimation</title>
   <style>
-    *{
+    * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
-    body{
+
+    body {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -18,7 +20,8 @@
       background-color: #333;
       overflow: hidden;
     }
-    .box{
+
+    .box {
       position: relative;
       background-color: #fff;
       padding: 15vmin 10vmin;
@@ -28,7 +31,8 @@
       overflow: hidden;
       z-index: 0; // 开启层级比较开关
     }
-    .box::before{
+
+    .box::before {
       content: '';
       width: 200%;
       height: 200%;
@@ -36,13 +40,12 @@
       left: -50%;
       top: -50%;
       background-color: #22292f;
-      background-image: conic-gradient(
-        transparent,#66ddf7,transparent 30%
-      );
+      background-image: conic-gradient(transparent, #66ddf7, transparent 30%);
       z-index: -2;
       animation: rotate 5s linear infinite;
     }
-    .box::after{
+
+    .box::after {
       content: '';
       position: absolute;
       inset: 1vmin;
@@ -50,16 +53,19 @@
       background-color: #000;
       z-index: -1; // brefore < after < box 
     }
+
     @keyframes rotate {
-        to{
-          transform: rotate(360deg);
-        }
+      to {
+        transform: rotate(360deg);
       }
+    }
   </style>
 </head>
+
 <body>
   <div class="box">
     流水灯动画
   </div>
 </body>
+
 </html>
